# storage/api-docs/api-docs.json
@@ -94,6 +94,62 @@
                 }
             }
         },
+        "/api/sponsors/{id_event}": {
+            "get": {
+                "tags": [
+                    "Sponsors"
+                ],
+                "summary": "Display specific event sponsors list resource",
+                "description": "Display specific sponsor resource.",
+                "operationId": "a6ae29c88c9a214b132609f91bf9baea",
+                "parameters": [
+                    {
+                        "name": "id_event",
+                        "in": "path",
+                        "description": "ID of the event",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Sponsor details",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "sponsor": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Event not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/sponsors/{id}": {
             "get": {
                 "tags": [
